header gap fixed

--- a/styles.css
+++ b/styles.css
@@ -355,10 +355,15 @@ a {
 }
 
 .header {
+  width: 100%;
   max-width: 1250px;
+  margin: -1rem;
   height: 785px;
   padding: 1rem;
   display: flex;
+}
+.header > * {
+  margin: 1rem;
 }
 @media (max-width: 900px) {
   .header {
@@ -382,8 +387,8 @@ a {
     text-align: center;
     -webkit-padding-start: 0;
             padding-inline-start: 0;
-    -webkit-padding-after: 2.5rem;
-            padding-block-end: 2.5rem;
+    -webkit-padding-before: 1rem;
+            padding-block-start: 1rem;
   }
 }
 .header__imgs {
@@ -460,7 +465,6 @@ a {
 .section {
   max-width: 1250px;
   display: flex;
-  gap: 2.5rem;
   position: relative;
 }
 @media (max-width: 900px) {
@@ -653,7 +657,10 @@ a {
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 1.5rem;
+}
+.footer__social-media li:not(:last-child) {
+  -webkit-margin-end: 1rem;
+          margin-inline-end: 1rem;
 }
 .footer__legal {
   padding: 0;
